Minor fixes, code optimization